# sgpt-alpha

./: README.md  chkpt_latest.pt  pyproject.toml  sgpt.ipynb
.ipynb_checkpoints/: sgpt-checkpoint.ipynb  smoke_test-checkpoint.py
.virtual_documents/tests/: Untitled.ipynb  dsn_embedding_alpha.ipynb
archive/: dsn_embedding_test.py
chkpts/: sgpt_step1000.pt  sgpt_step1500.pt  sgpt_step2000.pt  sgpt_step2500.pt  sgpt_step500.pt
data/: tiny_entropy.npz
src/spectral_gpt/: __init__.ipynb  block.py  model.py
src/spectral_gpt/.ipynb_checkpoints/: block-checkpoint.py  model-checkpoint.py
src/spectral_gpt/datasets/: adaptive_entropy.py  entropy_index.py
src/spectral_gpt/layers/: classic_ffn.py  feedforward.py.save  fsp_ffn.py  logic.py  shared_proj.py  spectral_attention.py
src/spectral_gpt/layers/.ipynb_checkpoints/: attention-checkpoint.py  dsn_embedding-checkpoint.py  feedforward-checkpoint.py  (+5 more)
src/spectral_gpt/utils/: ema.py
src/spectral_gpt_alpha.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: dsn_embedding_alpha.ipynb  dsn_embedding_test.py  profile_on_dummy.py  spectral_attention_test.ipynb  test_model.py  test_phi_W_grad.py  test_phi_bias_grad.py  test_sia.py  test_train.py
tests/.ipynb_checkpoints/: dsn_embedding_alpha-checkpoint.ipynb  spectral_attention_test-checkpoint.py  test_logic-checkpoint.py  test_spectral_math-checkpoint.py
tools/: build_entropy_index.py
train/: chaos.py  dataset.py  stats.py  train.py
train/.ipynb_checkpoints/: aux_losses-checkpoint.py  callbacks-checkpoint.py  dataset-checkpoint.py  train-checkpoint.py
