# pyproject.toml  (place in repo root)

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-gpt-alpha"
version = "0.1.0"
description = "Prototype Spectral GPT Quecto"
authors = [{ name = "Lev" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch"        # core runtime dep
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
